modified email object

--- a/app/views/article_mailer/send_news.html.erb
+++ b/app/views/article_mailer/send_news.html.erb
@@ -2,5 +2,6 @@
   <body>
     <p><%=@email.kind%></p>
     <a href="<%= @email.link %>"><%= @email.title %></a>
+    <p><%=@email.attribution%></p>
   </body>
 </html>
